== 0.4.0

* Enhancements
  * Degrees Earned now combines Degree, Institution, and Year of Graduation
    * Previous Institutions will be removed
  * Citizenship Status added with required alien registration number for permanent residents

  * Update to Rails 3.2.6 and Contour 1.0.1
  * Updated Devise configuration files for devise 2.1.0

* Bug Fix
  * Administrators can now update applicant emails without going through the email confirmation/reconfirmation process

== 0.3.1

* Bug Fix
  * Initial setup now runs correctly: require 'securerandom'

== 0.3.0

* Enhancements
  * Applicants
    * can fall into either "predoc", "postdoc", or "summer" categories
    * can have a "personal statement" to fill out
    * added requirement to mail or email 3 recommendation letters
    * need to confirm their emails before being able to sign in
    * can upload a curriculum vitae
    * can have three preferred preceptors
  * Applications now have required fields that need to be completed before submission, however these are not required to save as a draft
  * Application type now affects what fields are displayed to the applicant
  * Administrators can now allow an applicant to resubmit their application
  * Use new Contour login attributes on Registration page
  * Use Contour for User account Confirmations and Unlocks

== 0.2.0

* Enhancements
  * Dashboard with quick applicant statistics added
  * Applicant page restructured
    * General Information
    * Contact Information
    * Education Information
    * Predoc and Postdoc section (general)
    * Trainee section
    * Administrative section
  * Applicants
    * List of applicants now utilizes a frozen header row
    * Added marital status
    * Add submitted at timestamp
    * Applicant Number renamed to CV Number
    * Reference number is now generated for each application
  * Login and Registration
    * Adminstrator Role added for management of applicants and preceptors