@@ -52,7 +52,7 @@
   </div>
 </div>
 
-<div class="control-group checkbox">
+<div class="control-group">
   <%= f.label :citizenship_status, nil, class: 'control-label' %>
   <div class="controls radio">
     <% Applicant::CITIZENSHIP_STATUS.each do |citizenship_status| %>
