@@ -4,6 +4,7 @@
   * Degrees Earned now combines Degree, Institution, and Year of Graduation
     * Previous Institutions will be removed
   * Citizenship Status added with required alien registration number for permanent residents
+  * Applicants can specify their degree types now using checkboxes
 
   * Update to Rails 3.2.6 and Contour 1.0.1
   * Updated Devise configuration files for devise 2.1.0
